(feat) add prisma

--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "frontend:dev": "vite",
     "frontend:build": "vue-tsc && vite build",
     "frontend:preview": "vite preview",
-    "backend:dev": "tsc-watch -p ./src/backend/tsconfig.json --onSuccess \"node dist/app.js\""
+    "backend:dev": "tsc-watch --build --clean -p ./src/backend/tsconfig.json --onSuccess \"node dist/app.js\"",
+    "backend:start": "tsc -p ./src/backend/tsconfig.json && node dist/app.js",
+    "dev": "nodemon --exec npm run backend:start"
+  },
+  "prisma": {
+    "seed": "ts-node --project src/backend/tsconfig.json prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "reflect-metadata": "^0.1.13",
@@ -22,12 +30,17 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.3",
     "@types/compression": "^1.7.3",
     "@types/express": "^4.17.18",
     "@types/helmet": "^4.0.0",
     "@types/node": "^20.8.3",
     "@vitejs/plugin-vue": "^4.2.3",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.4.1",
+    "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
