(feat) change all primary key to cuid

--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -8,6 +8,8 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "noImplicitReturns": false,
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "Node",
     "resolveJsonModule": true,
