--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "frontend:preview": "vite preview",
     "backend:dev": "tsc-watch --build --clean -p ./src/backend/tsconfig.json --onSuccess \"node dist/app.js\"",
     "backend:start": "tsc -p ./src/backend/tsconfig.json && node dist/app.js",
-    "dev": "nodemon --exec npm run backend:start"
+    "dev": "nodemon --watch 'src/backend/**/*' --ext 'ts,json' --exec npm run backend:start"
   },
   "prisma": {
     "seed": "ts-node --project src/backend/tsconfig.json prisma/seed.ts"
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.4.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
