--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_PORT=4000
+APP_PORT=8000
 
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -7,3 +7,6 @@ APP_PORT=4000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/mydb?schema=public"
+
+
+VITE_API_BASE_URL="http://localhost:8000/api"
