--- a/package.json
+++ b/package.json
@@ -17,30 +17,52 @@
     "seed": "ts-node --project src/backend/tsconfig.json prisma/seed.ts"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
     "@prisma/client": "^5.4.1",
+    "@unhead/vue": "^1.7.4",
+    "@vee-validate/rules": "^4.11.8",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
-    "vue": "^3.3.4"
+    "vee-validate": "^4.11.8",
+    "vite-svg-loader": "^4.0.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.3",
     "@types/compression": "^1.7.3",
     "@types/express": "^4.17.18",
+    "@types/express-session": "^1.17.8",
     "@types/helmet": "^4.0.0",
-    "@types/node": "^20.8.3",
+    "@types/node": "^20.8.7",
+    "@types/passport": "^1.0.13",
+    "@types/passport-local": "^1.0.36",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.16",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.31",
     "prisma": "^5.4.1",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2",
