--- a/package.json
+++ b/package.json
@@ -57,11 +57,19 @@
     "@types/node": "^20.8.7",
     "@types/passport": "^1.0.13",
     "@types/passport-local": "^1.0.36",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.17.0",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
     "prisma": "^5.4.1",
+    "stylelint": "^15.11.0",
+    "stylelint-config-recommended": "^13.0.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
