--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/vue": "^2.0.18",
     "@prisma/client": "^5.4.1",
     "@unhead/vue": "^1.7.4",
+    "@vee-validate/i18n": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
@@ -34,12 +35,14 @@
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
+    "uuid": "^9.0.1",
     "vee-validate": "^4.11.8",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
@@ -51,9 +54,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.3",
     "@types/compression": "^1.7.3",
-    "@types/express": "^4.17.18",
+    "@types/express": "^4.17.20",
     "@types/express-session": "^1.17.8",
     "@types/helmet": "^4.0.0",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.7",
     "@types/passport": "^1.0.13",
     "@types/passport-local": "^1.0.36",
